<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_toEndOf="@id/avatar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameText"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="28sp" />

            <LinearLayout
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:id="@+id/countryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/countryText"
                    android:text="@string/zapyataya"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/cityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="20sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/ageText"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/age"
                android:textSize="15sp"
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

</RelativeLayout>